# python-playground

./: .gitattributes  .gitignore  .sqlfluff  .vale.ini  Makefile  README.md  TODO.md  pyproject.toml  python-playground.code-workspace  ruff.toml
.github/: dependabot.yml
.github/other-configs/: .linkspector.yml
.github/super-linter-configs/: .sqlfluff  ruff.toml
.github/workflows/: check-repository-visualisation.yml  code-build.yml  code-diagram.yml  code-quality.yml  code-test,yml  code-test.yml  codeql-analysis.yml  dependency-review.yml  prose-check.yml  pull-request-checks.yml  repository-visualisation.yml
.github/workflows/config/: markdown-check-links.json
applications/: .sqlfluff  requirements-dev.txt
applications/django/: Makefile
applications/django/api/: asgi.py  settings.py  urls.py
applications/django/hotels/: models.py  serializer.py  views.py
applications/django_graphql/: Makefile  manage.py  requirements.txt  schema.json
applications/django_graphql/api/: settings.py  urls.py  wsgi.py
applications/django_graphql/blog/: apps.py  models.py  schema.py
applications/django_graphql/data/: create_test_data.sql
applications/django_rest/: .mutmut-cache  Makefile  manage.py  requirements.txt
applications/django_rest/api/: settings.py  urls.py
applications/django_rest/data/: create_test_data.sql
applications/django_rest/hotels/: models.py  urls.py  views.py
applications/flask_rest/: Makefile  app.py  cars.db  requirements.txt
applications/flask_rest/database/: queries.py  utils.py
applications/flask_rest/tests/: conftest.py  test_app.py
containers/: docker-compose.yml
containers/django_graphql/: Dockerfile
deployment/django_graphql/: deployment.yml
deployment/django_rest/: deployment.yml
requests/blog/: mutation.http  query.http
requests/cars/: get-cars.http  setup-cars.http
requests/hotels/: delete.http  get.http  get_list.http  get_one.http  post.http  put.http
(+15 files in other folders)
